Fix sidebar whitespace - add align-self: start to sidebar

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1070,6 +1070,7 @@ body {
     position: sticky;
     top: 100px;
     height: fit-content;
+    align-self: start;
 }
 
 /* PROMO BOX */
